# zt-ix

./: .env.example  .gitignore  AGENTS.md  APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md  alembic.ini  docker-compose.yml  lessons.md  progress.txt  pyproject.toml  runtime-config.example.yaml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  20260210_0001_phase2_data_foundation.py  20260210_0002_auth_option_a_schema.py  20260212_0003_join_request_node_scoped_active_uniqueness.py  20260212_0004_ipv6_allocation_persistence.py
app/: __init__.py  config.py  dependencies.py  main.py
app/auth/: __init__.py  local_credentials.py  pkce.py
app/cli/: __init__.py  controller_lifecycle.py  users.py
app/db/: __init__.py  base.py  enums.py  models.py  session.py
app/integrations/: __init__.py  peeringdb.py
app/provisioning/: __init__.py  controller_auth.py  controller_lifecycle.py  route_servers.py  service.py  tasks.py
app/repositories/: __init__.py  audit_events.py  errors.py  ipv6_allocations.py  join_requests.py  local_credentials.py  memberships.py  oauth_state_nonces.py  user_asns.py  user_network_access.py  users.py  zt_networks.py
app/routes/: auth.py  workflow.py
docker/api/: Dockerfile
docker/nginx/: default.conf
docker/web/: Dockerfile
docker/zerotier/: local.conf
frontend/: branding.config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: test_config.py  test_docker_compose_runtime_config.py  test_health.py
(+37 files in other folders)
